alpha-codegen/tests/snapshots/scheduledc_snapshots__producer_consumer_no_reduce_legal_sequential_schedule.snap
---
source: alpha-codegen/tests/scheduledc_snapshots.rs
expression: extract_driver_body(&code).to_string()
---
// Evaluate every statement, in schedule order.
	long c1;
	for (c1 = 0; c1 < N; c1 += 1) {
		{
			long i = c1;
			Y(i) = X(i);
		}
	}
	for (c1 = 0; c1 < N; c1 += 1) {
		{
			long i = c1;
			W(i) = ((Y(i)) + (((float)(1))));
		}
	}
