alpha-codegen/tests/snapshots/scheduledc_snapshots__producer_consumer_no_reduce_reversed_schedule_is_illegal.snap
---
source: alpha-codegen/tests/scheduledc_snapshots.rs
expression: err
---
illegal schedule: 'W' reads 'Y' but the schedule doesn't guarantee the producer instance runs strictly before the consumer instance that reads it (§7.2)
